Fixed #topLine spacing when timer text gets bigger at < 30 seconds left

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ h2 {
 
 #topLine {
   font-size: 2.0em;
+  height: 2.5em;
 }
 #timer {
   display: inline;
